@@ -2339,3 +2339,4 @@ Version 16
 		SimpleInspectors now use the same max properties as their parents.
 	GUIState.getMaximumPropertiesForInspector() added
 	Updated wcss tutorial organization
+	Deleted mason.1.3.1.command
